--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-toast": "^1.2.11",
     "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "nodemailer": "^7.0.3",
